[gd_scene load_steps=2 format=3 uid="uid://cgbg6vhvf2jsv"]

[ext_resource type="Script" path="res://Scenes/UI_Scenes/Scripts/MapSelect.gd" id="1_gucdw"]

[node name="MapSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1060.0
offset_bottom = -992.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gucdw")
metadata/_edit_horizontal_guides_ = [48.0, 100.0]
metadata/_edit_vertical_guides_ = [216.0]

[node name="MapSelectHeader" type="RichTextLabel" parent="."]
layout_mode = 1
offset_right = 94.0
offset_bottom = 27.0
text = "Select Map"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="MapLoad" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 1.18182
anchor_right = 0.891667
anchor_bottom = 1.53436
offset_right = -1.52588e-05
offset_bottom = -0.0240021
text = "Load"
metadata/_edit_use_anchors_ = true

[node name="MapDropdown" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.545455
anchor_right = 0.266667
anchor_bottom = 0.545455
offset_right = 152.0
offset_bottom = 31.0
item_count = 1
selected = 0
popup/item_0/text = "6 Tanglewood"
popup/item_0/id = 0
metadata/_edit_use_anchors_ = true

[node name="RangeClear" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_top = 104.0
offset_right = 62.0
offset_bottom = 135.0
text = "Clear"

[connection signal="pressed" from="MapLoad" to="." method="_on_map_load_pressed"]
[connection signal="pressed" from="RangeClear" to="." method="_on_range_clear_pressed"]
